@@ -394,6 +394,10 @@ static c_keyword_t const C_KEYWORDS[] = {
     Y_MSC___FASTCALL,     LANG_ANY,               KC__, TA_MSC_FASTCALL       },
   { L_MSC___FASTCALL,
     Y_MSC___FASTCALL,     LANG_ANY,               KC__, TA_MSC_FASTCALL       },
+  { L_MSC__FORCEINLINE,
+    Y_INLINE,             LANG_ANY,               KC__, TS_INLINE             },
+  { L_MSC___FORCEINLINE,
+    Y_INLINE,             LANG_ANY,               KC__, TS_INLINE             },
   { L_MSC__INLINE,
     Y_INLINE,             LANG_ANY,               KC__, TS_INLINE             },
   { L_MSC__RESTRICT,
