@@ -308,6 +308,8 @@ char const L_MSC___DECLSPEC[]     = "__declspec";
 char const L_MSC__FASTCALL[]      = "_fastcall";
 char const L_MSC___FASTCALL[]     = "__fastcall";
 char const L_MSC_FASTCALL[]       = "fastcall";
+char const L_MSC__FORCEINLINE[]   = "_forceinline";
+char const L_MSC___FORCEINLINE[]  = "__forceinline";
 char const L_MSC__INLINE[]        = "_inline";
 char const L_MSC__RESTRICT[]      = "_restrict";
 char const L_MSC__STDCALL[]       = "_stdcall";
